force-app/main/default/objects/CommitCaseAccuracyConfig__c/CommitCaseAccuracyConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Commit Case Accuracy Config</label>
</CustomObject>