force-app/main/default/objects/CommitCaseAccuracyConfig__c/fields/Maximum_Funnel_Target__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Funnel_Target__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The highest MULTIPLIER of Quota. IE: a value of 3 results in 3xQuota being the maximum Funnel Addition Target value.</description>
    <inlineHelpText>The highest MULTIPLIER of Quota. IE: a value of 3 results in 3xQuota being the maximum Funnel Addition Target value.</inlineHelpText>
    <label>Maximum Funnel Target</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>