force-app/main/default/objects/CommitCaseAccuracyConfig__c/fields/Minimum_Funnel_Target__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Funnel_Target__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The lowest MULTIPLIER of Quota. IE: a value of 1 results in 1xQuota being the minimum Funnel Addition Target value.</description>
    <inlineHelpText>The lowest MULTIPLIER of Quota. IE: a value of 1 results in 1xQuota being the minimum Funnel Addition Target value.</inlineHelpText>
    <label>Minimum Funnel Target</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>