force-app/main/default/objects/CommitCaseAccuracyConfig__c/fields/ProbabilityThreshold__c.field-meta.xml
<CustomField>
    <fullName>ProbabilityThreshold__c</fullName>
    <defaultValue>70</defaultValue>
    <description>The Probability % on a Stage 4 Opportunity to consider a Commit Case.</description>
    <inlineHelpText>The Probability % on a Stage 4 Opportunity to consider a Commit Case.</inlineHelpText>
    <label>Probability Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>